OREO-80 #comment implemented job seeker's activities for rating feature

--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -101,12 +101,12 @@
                         android:textColor="#06bebd" />
 
                     <Button
-                        android:id="@+id/btn_messages"
+                        android:id="@+id/btn_ratings"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="50"
                         android:background="@drawable/btn_square_menu"
-                        android:text="Messages"
+                        android:text="Ratings"
                         android:textColor="#06bebd" />
                 </LinearLayout>
 
