--- a/app/src/main/res/layout/list_content.xml
+++ b/app/src/main/res/layout/list_content.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/seekerName"
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
