modifed jobseeker, added view account details button

--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -7,6 +7,12 @@
     android:background="#FFFFFF"
     tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivityForJobSeeker">
 
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="View account details"
+    android:id="@+id/btn_account"
+    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -135,7 +141,7 @@
                         android:textColor="#06bebd" />
 
                     <Button
-                        android:id="@+id/btn_account"
+
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="50"
