Moved all hardcoded android:text values to the strings.xml file.

--- a/app/src/main/res/layout/activity_create_job_post_acitvity.xml
+++ b/app/src/main/res/layout/activity_create_job_post_acitvity.xml
@@ -95,7 +95,7 @@
                         android:id="@+id/spinner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="SELECT CATEGORY"/>
+                        android:text="@string/select_category_create_posting"/>
                 </LinearLayout>
 
                 <LinearLayout
