--- a/app/src/main/res/layout/activity_provider_rate.xml
+++ b/app/src/main/res/layout/activity_provider_rate.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Attitude:"
+            android:text="@string/attitude_provider"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -54,7 +54,7 @@
             android:id="@+id/desc2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Punctuality:"
+            android:text="@string/punctuality"
             android:textStyle="bold"
             android:layout_weight="1"
             android:padding="10dp"
@@ -81,7 +81,7 @@
             android:id="@+id/desc3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cleanliness:"
+            android:text="@string/cleanliness"
             android:textStyle="bold"
             android:layout_weight="1"
             android:padding="10dp"
@@ -108,7 +108,7 @@
             android:id="@+id/desc5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Comment (150 characters max):"
+            android:text="@string/comment_150_characters_max_provider"
             android:textStyle="bold"
             android:padding="10dp"
             android:textSize="20sp"/>
@@ -130,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:text="Submit"
+        android:text="@string/submit_provider"
         android:textColor="#06bebd"
         android:background="@drawable/roundedbtn2"
         android:textAllCaps="false"
