--- a/app/src/main/res/layout/activity_provider_ratings_list.xml
+++ b/app/src/main/res/layout/activity_provider_ratings_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="Asap-Regular"
-        android:text="My Ratings"
+        android:text="@string/my_ratings_provider"
         android:textAlignment="center"
         android:textColor="#06bebd"
         android:textSize="44sp" />
