--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -8,7 +8,7 @@
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/addprofile"
-     android:text="addProfile"
+     android:text="@string/addprofile"
      android:gravity="center"
      />
 
