--- a/app/src/main/res/layout/activity_application_questions.xml
+++ b/app/src/main/res/layout/activity_application_questions.xml
@@ -6,7 +6,7 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Select years of experience"
+    android:text="@string/select_years_of_experience"
     />
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -17,17 +17,17 @@
         <RadioButton android:id="@+id/yearsOption1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1-3 years"
+            android:text="@string/_1_3_years"
             />
         <RadioButton android:id="@+id/yearsOption2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4-6 years"
+        android:text="@string/_4_6_years"
         />
         <RadioButton android:id="@+id/yearsOption3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="6+ years"
+            android:text="@string/_6_years"
             />
     </RadioGroup>
 
@@ -35,7 +35,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select avaliblity"
+        android:text="@string/select_avaliblity"
         />
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -46,17 +46,17 @@
         <RadioButton android:id="@+id/avalibityOption1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ONLY DAY"
+            android:text="@string/only_day"
             />
         <RadioButton android:id="@+id/avalibityOption2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" ONLY NIGHT"
+            android:text="@string/only_night"
             />
         <RadioButton android:id="@+id/avalibityOption3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DAY OR NIGHT"
+        android:text="@string/day_or_night"
         />
 
 
@@ -66,7 +66,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter expected wage"/>
+        android:text="@string/enter_expected_wage"/>
 <EditText
     android:layout_width="80sp"
     android:layout_height="30sp"
@@ -75,7 +75,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="APPLY"
+        android:text="@string/apply"
         android:id="@+id/apply"
         />
 
