--- a/app/src/main/res/layout/activity_provider_view_rating.xml
+++ b/app/src/main/res/layout/activity_provider_view_rating.xml
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="Average rating:"
+                android:text="@string/average_rating_provider"
                 android:padding="10dp"
                 android:textSize="20sp"/>
 
@@ -64,7 +64,7 @@
                 android:id="@+id/desc2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Attitude:"
+                android:text="@string/attitude_provider_rating"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:textSize="20sp"/>
@@ -92,7 +92,7 @@
                 android:id="@+id/desc3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Helpfulness:"
+                android:text="@string/helpfulness"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:textSize="20sp"/>
@@ -120,7 +120,7 @@
                 android:id="@+id/desc4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Quality of work environment:"
+                android:text="@string/quality_of_work_environment"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:textSize="20sp"/>
@@ -148,7 +148,7 @@
                 android:id="@+id/desc5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Comment:"
+                android:text="@string/comment_provider"
                 android:textStyle="bold"
                 android:padding="10dp"
                 android:textSize="20sp"/>
