--- a/app/src/main/res/layout/activity_view_applicant_credentials.xml
+++ b/app/src/main/res/layout/activity_view_applicant_credentials.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Type of Job Applied for "/>
+        android:text="@string/type_of_job_applied_for"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name of applicant"/>
+        android:text="@string/name_of_applicant"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="years of experience"/>
+        android:text="@string/years_of_experience"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="availibility"/>
+        android:text="@string/availibility"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expected Wage"/>
+        android:text="@string/expected_wage"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
         android:id="@+id/acceptApplicant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accept Applicant"/>
+        android:text="@string/accept_applicant"/>
 
 
 
