--- a/app/src/main/res/layout/activity_view_jobs.xml
+++ b/app/src/main/res/layout/activity_view_jobs.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="Asap-Regular"
-        android:text="Available Jobs"
+        android:text="@string/available_jobs"
         android:textAlignment="center"
         android:textColor="#06bebd"
         android:textSize="44sp" />
