--- a/app/src/main/res/layout/jobfragment.xml
+++ b/app/src/main/res/layout/jobfragment.xml
@@ -28,7 +28,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:text="@string/description"
         android:lineSpacingExtra="-3dp"
         android:id="@+id/desc"
         android:layout_alignBottom="@+id/imageView"
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="Job Title"
+        android:text="@string/job_title_fragment"
         android:textColor="#06bebd"
         android:textStyle="bold"
         android:id="@+id/heading"
