--- a/app/src/main/res/layout/activity_view_applicants_account.xml
+++ b/app/src/main/res/layout/activity_view_applicants_account.xml
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Call"
-            android:id="@+id/btn_edit_phonenumber"
+            android:id="@+id/btn_call"
             />
 
     </LinearLayout>
