--- a/app/src/main/res/layout/activity_view_your_profiles.xml
+++ b/app/src/main/res/layout/activity_view_your_profiles.xml
@@ -8,7 +8,7 @@
  <Button
      android:layout_width="wrap_content"
      android:layout_height="60dp"
-     android:text="click here to add a new profile"
+     android:text="@string/click_here_to_add_a_new_profile"
      android:gravity="center"
      android:id="@+id/addnewprofile"
      />
