modified job fragment to fix overlaping text on the right side of the bar

--- a/app/src/main/res/layout/jobfragment.xml
+++ b/app/src/main/res/layout/jobfragment.xml
@@ -36,6 +36,7 @@
         android:lineSpacingExtra="-3dp"
         android:id="@+id/desc"
         android:paddingTop="10dp"
+        android:paddingRight="5dp"
         android:layout_alignBottom="@+id/leftIco"
         android:layout_alignLeft="@+id/heading"
         android:layout_alignStart="@+id/heading" />
