--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#fff540</color>
     <color name="commonJobsLightBlue">#06bebd</color>
+    <color name="accountBackground">#dbd1a9f2</color>
 </resources>
