--- a/app/src/main/res/layout/activity_navigation_jobprovider.xml
+++ b/app/src/main/res/layout/activity_navigation_jobprovider.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_navigation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FFFFFF"
     tools:context="com.oreo.mcommonjobs.Activity.NavigationActivityForJobProvider">
 
@@ -42,84 +38,94 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="80"
+            android:layout_weight="100"
             android:weightSum="100">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="35"
-                android:weightSum="100">
+                android:layout_weight="50">
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50">
+                    android:weightSum="2"
+                    android:layout_weight="50"
+                    android:orientation="horizontal">
 
                     <Button
                         android:text="@string/main_menu_view_applicants"
-                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_view_applicants"
-                        android:layout_weight="1" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="50">
+                        android:layout_weight="1"
+                        android:layout_width="40dp"
+                        android:background="@drawable/btn_square_menu"
+                        android:textColor="#06bebd"
+                        />
 
                     <Button
                         android:text="Account"
-                        android:layout_width="match_parent"
+                        android:layout_width="40dp"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_account" />
+                        android:id="@+id/btn_account"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_square_menu"
+                        android:textColor="#06bebd"
+                        />
+
                 </LinearLayout>
             </LinearLayout>
+
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="35"
+                android:layout_weight="50"
                 android:weightSum="100">
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50">
+                    android:weightSum="2">
 
                     <Button
                         android:text="@string/main_menu_add_job"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/btn_addjob" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="50">
+                        android:id="@+id/btn_addjob"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_square_menu"
+                        android:textColor="#06bebd"/>
 
                     <Button
                         android:id="@+id/btn_rating"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="@string/rating" />
+                        android:text="@string/rating"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_square_menu"
+                        android:textColor="#06bebd"/>
+
                 </LinearLayout>
+
             </LinearLayout>
 
+        </LinearLayout>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="20"></LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:background="#06bebd"
+            android:orientation="vertical">
+
         </LinearLayout>
     </LinearLayout>
+
+
+
 </RelativeLayout>
