--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -7,13 +7,6 @@
     android:background="#FFFFFF"
     tools:context="com.oreo.mcommonjobs.Activity.NavigationActivityForJobSeeker">
 
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="25dp"
-    android:text="@string/view_account_details"
-    android:id="@+id/btn_account"
-    android:background="@color/accountBackground"
-    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -54,30 +47,30 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="33"
+                android:layout_weight="25"
                 android:orientation="horizontal"
                 android:weightSum="100">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50"
+                    android:weightSum="2"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btn_view_jobs_for_your_profile"
-                        android:layout_width="match_parent"
+                        android:layout_width="40dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="50"
+                        android:layout_weight="1"
                         android:background="@drawable/btn_square_menu"
                         android:text="@string/viewjobs_profile_jobs"
                         android:textColor="#06bebd" />
 
                     <Button
                         android:id="@+id/btn_profile"
-                        android:layout_width="match_parent"
+                        android:layout_width="40dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="50"
+                        android:layout_weight="1"
                         android:background="@drawable/btn_square_menu"
                         android:text="@string/profile_seeker"
                         android:textColor="#06bebd" />
@@ -88,30 +81,30 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="34"
+                android:layout_weight="25"
                 android:orientation="horizontal"
                 android:weightSum="100">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50"
+                    android:weightSum="2"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btn_addjob"
-                        android:layout_width="wrap_content"
+                        android:layout_width="40dp"
+                        android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:layout_weight="44"
                         android:background="@drawable/btn_square_menu"
                         android:text="@string/view_all_jobs"
                         android:textColor="#06bebd" />
 
                     <Button
                         android:id="@+id/btn_ratings"
-                        android:layout_width="wrap_content"
+                        android:layout_width="40dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="50"
+                        android:layout_weight="1"
                         android:background="@drawable/btn_square_menu"
                         android:text="@string/ratings_seeker"
                         android:textColor="#06bebd" />
@@ -122,21 +115,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="33"
+                android:layout_weight="25"
                 android:orientation="horizontal"
                 android:weightSum="100">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="50"
+                    android:weightSum="2"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btn_pending_applications"
-                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="50"
+                        android:layout_width="40dp"
+                        android:layout_weight="1"
                         android:background="@drawable/btn_square_menu"
                         android:text="@string/view_your_pending_applications"
                         android:textColor="#06bebd" />
@@ -144,10 +137,9 @@
                     <Button
 
                         android:id="@+id/btn_shared_jobs"
-
-                        android:layout_width="match_parent"
+                        android:layout_width="40dp"
+                        android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:layout_weight="50"
                         android:background="@drawable/btn_square_menu"
                         android:text="@string/view_shared_jobs"
                         android:textColor="#06bebd" />
@@ -155,15 +147,35 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="25"
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:weightSum="2"
+                    android:orientation="horizontal"
+                    android:gravity="center_horizontal">
+
+                    <Button
+                        android:text="@string/view_account_details"
+                        android:id="@+id/btn_account"
+                        android:layout_width="40dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/btn_square_menu"
+                        android:textColor="#06bebd"
+                        />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="10"
-            android:background="#06bebd"
-            android:orientation="vertical">
-
-        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
